# sodix-site

./: .gitignore  Dockerfile  LOGO_INSTRUCTIONS.md  REACT_GUIDE.md  README.md  README_ru.md  ROADMAP.md  ROADMAP_ru.md  i18n.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.gemini/: GOOGLE_WORKSPACE_INTEGRATION.md  git-log.md
app/: globals.css  layout.tsx
components/: Header.tsx  about.tsx  animated-section.tsx  back-to-top.tsx  banner.tsx  contacts.tsx  cta.tsx  equipment.tsx  footer.tsx  header.tsx  hero.tsx  logo.tsx  main-nav.tsx  mobile-nav.tsx  mode-toggle.tsx  motion.tsx  portfolio.tsx  services.tsx  (+4 more)
modules/db/: README_PARSER.md  gost_57837-2017.json  main.py  parser_23met.py  pyproject.toml
modules/db/postgres_viewer/: .editorconfig  README.md  angular.json  package-lock.json  package.json
modules/db/postgres_viewer/src/: index.html  styles.css
modules/db/postgres_viewer/src/app/: api.service.ts  app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  app.spec.ts  app.ts
modules/db/postgres_viewer/src/app/component/: table-viewer.component.ts
modules/db/postgres_viewer/src/app/components/: table-viewer.component.ts
modules/db/postgres_viewer/src/app/components/search-materials/: search-materials.component.html  search-materials.component.scss  search-materials.component.ts
modules/db/postgres_viewer/src/app/models/: search-result.model.ts
modules/db/postgres_viewer/src/app/pipe/: highlight.pipe.ts
(+16 files in other folders)
