[project]
name = "angular"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "bs4>=0.0.2",
    "crewai-mcp-server>=0.1.0",
    "crewai-ui>=0.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.1",
    "gunicorn>=23.0.0",
    "lxml>=5.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "regex>=2025.11.3",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.38.0",
]
